--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -12,8 +12,7 @@
 
 .hero-section {
   position: relative;
-  background: url("http://localhost:3000/heroimagee.jpg") no-repeat center
-    center/cover;
+  background: url("../assets/heroimagee.jpg") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   align-items: center;
