--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,4 +1,3 @@
-/* Animação de entrada do título e do parágrafo */
 @keyframes fadeInUp {
   from {
     opacity: 0;
@@ -17,7 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden; /* Garante que o conteúdo não saia dos limites da seção */
+  overflow: hidden;
 }
 
 .hero-section::before {
@@ -27,9 +26,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(15, 4, 112, 0.644);
+  background-color: rgba(5, 1, 37, 0.733);
   z-index: 1;
-  transition: background-color 0.5s ease; /* Transição suave da cor do fundo */
+  transition: background-color 0.5s ease;
 }
 
 .hero-content {
@@ -37,63 +36,73 @@
   z-index: 2;
   color: white;
   text-align: center;
-  opacity: 0; /* Inicialmente invisível para animação */
-  animation: fadeInUp 1s forwards; /* Animação de entrada */
+  opacity: 0;
+  animation: fadeInUp 1s forwards;
 }
 
-/* Estilização do título */
 .hero-content h1 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-  opacity: 0; /* Inicialmente invisível para animação */
-  animation: fadeInUp 1s 0.5s forwards; /* Animação de entrada com delay */
+  font-size: 2.7rem;
+
+  opacity: 0;
+  animation: fadeInUp 1s 0.5s forwards;
 }
 
-/* Estilização do parágrafo */
 .hero-content p {
   font-size: 1.5rem;
-  margin-bottom: 2rem;
-  opacity: 0; /* Inicialmente invisível para animação */
-  animation: fadeInUp 1s 1s forwards; /* Animação de entrada com delay */
-  max-width: 80%;
-  margin: 0 auto; /* Centraliza o parágrafo horizontalmente */
-  text-align: center; /* Garante que o texto esteja centralizado */
+
+  opacity: 0;
+  animation: fadeInUp 1s 1s forwards;
+  max-width: 70%;
+  margin: 0 auto;
+  text-align: center;
+}
+.hero-content span {
+  font-size: 2rem;
 }
 
-/* Contêiner dos botões alinhado em linha */
 .button-container {
   display: flex;
-  justify-content: center; /* Alinha os botões ao centro */
-  gap: 30px; /* Espaço de 10px entre os botões */
-  margin-top: 1rem; /* Espaço acima dos botões */
+  justify-content: center;
+  gap: 30px;
+  margin-top: 1rem;
 }
 
-/* Estilização dos botões */
 .custom-button {
   padding: 0.75rem 1.5rem;
-  background-color: #761dca;
   border: none;
   border-radius: 10px;
   color: white;
   cursor: pointer;
   font-size: 1rem;
-  transition: transform 0.3s ease, background-color 0.3s ease; /* Transições para efeito de hover */
+  transition: transform 0.3s ease, background-color 0.3s ease, border 0.3s ease;
   display: flex;
-  align-items: center; /* Alinha o ícone e o texto verticalmente */
+  align-items: center;
+  background-color: #761dca;
 }
 
 .custom-button:hover {
-  background-color: #460a8a;
-  transform: scale(1.1); /* Aumenta o tamanho do botão */
+  background-color: #500c9e;
+  transform: scale(1.1);
 }
 
-/* Estilização do ícone dentro do botão */
+.custom-button.transparent {
+  background-color: transparent;
+  border: 2px solid #761dca;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.custom-button.transparent:hover {
+  background-color: #500c9e;
+  color: white;
+  border: 2px solid transparent;
+}
+
 .icon {
-  margin-right: 0.5rem; /* Espaçamento entre o ícone e o texto */
+  margin-right: 0.5rem;
 }
 
-/* Estilização do logo */
 .hero-logo {
-  max-width: 200px; /* Ajuste o valor conforme necessário */
-  height: auto; /* Mantém a proporção da imagem */
+  max-width: 200px;
+  height: auto;
 }
