--- a/src/components/ProductsSection.css
+++ b/src/components/ProductsSection.css
@@ -35,11 +35,11 @@
 
 .product {
   background-color: #fff;
-  border: 2px solid #ddd;
+  border: 2px solid #9c9c9c;
   border-radius: 8px;
   padding: 1.5rem;
   width: 300px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.356);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   opacity: 0;
   animation: fadeInUp 1s 1s ease-out forwards;
